--- a/new_version/index.html
+++ b/new_version/index.html
@@ -2,24 +2,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+    crossorigin="anonymous"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/base.css" />
-
     <title>Sodia Business</title>
   </head>
     <!-- HEADER -->
@@ -36,162 +29,156 @@
     <!-- FORM START-->
     <div class="wrapper">
     <div class="container col-sm-12">
-      <div class="layout_out-side">
-        <h2>Thông tin của anh chị</h2>
+      <div class="layout_out">
         <div class="layout_in-side">
+          <div class="text2"><h2>THÔNG TIN<span> LIÊN HỆ</span></h2></div>
           <!-- FORM 1 -->
           <form>
-            <!-- 2 column grid layout with text inputs for the first and last names -->
-            <div class="row mb-4">
+            <div class="row gap-row">
               <div class="col">
-                <div class="form-outline">
-                  <input type="text" id="form6Example1" class="form-control" />
-                  <label class="form-label" for="form6Example1"
-                    >First name</label
-                  >
-                </div>
-              </div>
+                <input type="text" class="form-control" placeholder="Khách hàng">
+              </div>  
               <div class="col">
-                <div class="form-outline">
-                  <input type="text" id="form6Example2" class="form-control" />
-                  <label class="form-label" for="form6Example2"
-                    >Last name</label
-                  >
-                </div>
+                <input type="text" class="form-control" placeholder="Email">
               </div>
             </div>
-
-            <!-- Text input -->
-            <div class="form-outline mb-4">
-              <input type="text" id="form6Example3" class="form-control" />
-              <label class="form-label" for="form6Example3">Company name</label>
+            <div class="row gap-row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Điện thoại">
+              </div>
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Tên công ty">
+              </div>
             </div>
-
-            <!-- Text input -->
-            <div class="form-outline mb-4">
-              <input type="text" id="form6Example4" class="form-control" />
-              <label class="form-label" for="form6Example4">Address</label>
+            <div class="row gap-row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Đã từng hợp tác trước đây">
+              </div>
             </div>
-
-            <!-- Email input -->
-            <div class="form-outline mb-4">
-              <input type="email" id="form6Example5" class="form-control" />
-              <label class="form-label" for="form6Example5">Email</label>
-            </div>
-
-            <!-- Number input -->
-            <div class="form-outline mb-4">
-              <input type="number" id="form6Example6" class="form-control" />
-              <label class="form-label" for="form6Example6">Phone</label>
-            </div>
-
-            <!-- Message input -->
-            <div class="form-outline mb-4">
-              <textarea
-                class="form-control"
-                id="form6Example7"
-                rows="4"
-              ></textarea>
-              <label class="form-label" for="form6Example7"
-                >Additional information</label
-              >
-            </div>
-
-            <!-- Checkbox -->
-            <div class="form-check d-flex justify-content-center mb-4">
-              <input
-                class="form-check-input me-2"
-                type="checkbox"
-                value=""
-                id="form6Example8"
-                checked
-              />
-              <label class="form-check-label" for="form6Example8">
-                Create an account?
-              </label>
-            </div>
-
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-4">
-              Place order
-            </button>
           </form>
         </div>
-        <h2>Dịch vụ</h2>
+        <div class="text3-out"><h2>CHỌN<span> GIẢI PHÁP</span></h2></div>
+        <div class="text4-out">Chọn tab bên dưới nếu anh/chị muốn làm việc nhiều hơn với chúng tôi
+          trong các dịch vụ khác.
+          </div>
+      </div>
+      <div class="layout_out-side">
         <div class="layout_in-side">
-          <!-- FORM 2 -->
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">@</span>
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Username"
-              aria-label="Username"
-              aria-describedby="basic-addon1"
-            />
-          </div>
-
-          <div class="input-group mb-3">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Recipient's username"
-              aria-label="Recipient's username"
-              aria-describedby="basic-addon2"
-            />
-            <span class="input-group-text" id="basic-addon2">@example.com</span>
-          </div>
-
-          <label for="basic-url" class="form-label">Your vanity URL</label>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon3"
-              >https://example.com/users/</span
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="basic-url1"
-              aria-describedby="basic-addon3"
-            />
-          </div>
-
-          <div class="input-group mb-3">
-            <span class="input-group-text">$</span>
-            <input
-              type="text"
-              class="form-control"
-              aria-label="Amount (to the nearest dollar)"
-            />
-            <span class="input-group-text">.00</span>
-          </div>
-
-          <div class="input-group mb-3">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Username"
-              aria-label="Username"
-            />
-            <span class="input-group-text">@</span>
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Server"
-              aria-label="Server"
-            />
-          </div>
-
-          <div class="input-group">
-            <span class="input-group-text">With textarea</span>
-            <textarea
-              class="form-control"
-              aria-label="With textarea"
-            ></textarea>
+          <div class="text2"><h2>YÊU CẦU<span> THIẾT KẾ</span></h2></div>
+          <!-- FORM 1 -->
+          <form>
+            <div class="row gap-row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Website hiện tại nếu có">
+              </div>  
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Tên công ty anh/chị có ý nghĩa gì?">
+              </div>
+            </div>
+            <div class="row gap-row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Hãy liệt kê các đối thủ cạnh tranh chính? (Vui lòng gửi địa chỉ website nếu có)">
+              </div>
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Sự khác biệt của công ty với các đối thủ khác">
+              </div>
+            </div>
+            <div class="row gap-row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Slogan hoặc tagline của công ty anh/chị là gì?">
+              </div>
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Vui lòng cho biết ngân sách ước tính cho dự án này">
+              </div>
+            </div>
+          </form>
+        </div>
+        <!-- GIẢI PHÁP -->
+        <div class="layout_in-side">
+          <div class="text2"><h2><span>THÔNG TIN</span> VỀ WEBSITE</h2></div>
+          <form>
+            <div class="row gap-row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Website hiện tại nếu có">
+              </div>  
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Tên công ty anh/chị có ý nghĩa gì?">
+              </div>
+            </div>
+            <div class="row gap-row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Hãy liệt kê các đối thủ cạnh tranh chính? (Vui lòng gửi địa chỉ website nếu có)">
+              </div>
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Sự khác biệt của công ty với các đối thủ khác">
+              </div>
+            </div>
+            <div class="row gap-row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Slogan hoặc tagline của công ty anh/chị là gì?">
+              </div>
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Vui lòng cho biết ngân sách ước tính cho dự án này">
+              </div>
+            </div>
+          </form>
+        </div>
+         <!-- FORM 3 -->
+          <div class="layout_in-side">
+            <div id="accordion">
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Collapsible Group Item #1
+                    </button>
+                  </h5>
+                </div>
+            
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                  <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingTwo">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Collapsible Group Item #2
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                  <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingThree">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Collapsible Group Item #3
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                  <div class="card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
     </div>
   </div>
-    <!-- FORM END -->
+<!-- FORM END  -->
+<!-- Footer -->
+<!-- End Footer -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
