--- a/new_version/index.html
+++ b/new_version/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,8 +10,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;500;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/animate.css">
     <link rel="stylesheet" href="./assets/css/base.css" />
     <title>Sodia Business</title>
   </head>
@@ -19,7 +23,7 @@
     <header class="header">
       <div class="header-area">
         <a href="https://sodia.agency/" class="header_logo" target="_blank"
-          ><img src="/new_version/assets/img/Logo_red.png" alt="sodia Logo"
+          ><img src="./new_version/assets/img/Logo_red.png" alt="sodia Logo"
         /></a>
         <!-- <div class="text1">
           <span><h1>ĐỀ XUẤT GIẢI PHÁP 3X DOANH SỐ TỪ SODIA AGENCY</h1></span>
