--- a/new_version/index.html
+++ b/new_version/index.html
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="header-area">
         <a href="https://sodia.agency/" class="header_logo" target="_blank"
-          ><img src="./new_version/assets/img/Logo_red.png" alt="sodia Logo"
+          ><img src="/new_version/assets/img/Logo_red.png" alt="sodia Logo"
         /></a>
         <!-- <div class="text1">
           <span><h1>ĐỀ XUẤT GIẢI PHÁP 3X DOANH SỐ TỪ SODIA AGENCY</h1></span>
