--- a/new_version/iasdndexX.html
+++ b/new_version/iasdndexX.html
@@ -193,3 +193,235 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
+
+<div class="layout_out-side">
+  <div class="text3">
+    <h2><span>GIẢI PHÁP</span> QUẢN TRỊ THƯƠNG HIỆU MẠNG XÃ HỘI</h2>
+  </div>
+<div class="layout_in-side">
+  <div class="text2">
+    <h2>YÊU CẦU<span> THIẾT KẾ</span></h2>
+  </div>
+  <!-- FORM 1 -->
+  <form>
+    <div class="row gap-row">
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Website hiện tại nếu có"
+        />
+      </div>
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Tên công ty anh/chị có ý nghĩa gì?"
+        />
+      </div>
+    </div>
+    <div class="row gap-row">
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Hãy liệt kê các đối thủ cạnh tranh chính? (Vui lòng gửi địa chỉ website nếu có)"
+        />
+      </div>
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Sự khác biệt của công ty với các đối thủ khác"
+        />
+      </div>
+    </div>
+    <div class="row gap-row">
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Slogan hoặc tagline của công ty anh/chị là gì?"
+        />
+      </div>
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Vui lòng cho biết ngân sách ước tính cho dự án này"
+        />
+      </div>
+    </div>
+  </form>
+</div>
+<!-- GIẢI PHÁP -->
+<div class="layout_in-side">
+  <div class="text2">
+    <h2><span>THÔNG TIN</span> VỀ WEBSITE</h2>
+  </div>
+  <form>
+    <div class="row gap-row">
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Website hiện tại nếu có"
+        />
+      </div>
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Tên công ty anh/chị có ý nghĩa gì?"
+        />
+      </div>
+    </div>
+    <div class="row gap-row">
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Hãy liệt kê các đối thủ cạnh tranh chính? (Vui lòng gửi địa chỉ website nếu có)"
+        />
+      </div>
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Sự khác biệt của công ty với các đối thủ khác"
+        />
+      </div>
+    </div>
+    <div class="row gap-row">
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Slogan hoặc tagline của công ty anh/chị là gì?"
+        />
+      </div>
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Vui lòng cho biết ngân sách ước tính cho dự án này"
+        />
+      </div>
+    </div>
+  </form>
+</div>
+<!-- FORM 3 -->
+<div class="layout_in-side">
+  <div id="accordion">
+    <div class="card">
+      <div class="card-header" id="headingOne">
+        <h5 class="mb-0">
+          <button
+            class="btn btn-link"
+            data-toggle="collapse"
+            data-target="#collapseOne"
+            aria-expanded="true"
+            aria-controls="collapseOne"
+          >
+            Collapsible Group Item #1
+          </button>
+        </h5>
+      </div>
+
+      <div
+        id="collapseOne"
+        class="collapse show"
+        aria-labelledby="headingOne"
+        data-parent="#accordion"
+      >
+        <div class="card-body">
+          Anim pariatur cliche reprehenderit, enim eiusmod high
+          life accusamus terry richardson ad squid. 3 wolf moon
+          officia aute, non cupidatat skateboard dolor brunch.
+          Food truck quinoa nesciunt laborum eiusmod. Brunch 3
+          wolf moon tempor, sunt aliqua put a bird on it squid
+          single-origin coffee nulla assumenda shoreditch et.
+          Nihil anim keffiyeh helvetica, craft beer labore wes
+          anderson cred nesciunt sapiente ea proident. Ad vegan
+          excepteur butcher vice lomo. Leggings occaecat craft
+          beer farm-to-table, raw denim aesthetic synth nesciunt
+          you probably haven't heard of them accusamus labore
+          sustainable VHS.
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header" id="headingTwo">
+        <h5 class="mb-0">
+          <button
+            class="btn btn-link collapsed"
+            data-toggle="collapse"
+            data-target="#collapseTwo"
+            aria-expanded="false"
+            aria-controls="collapseTwo"
+          >
+            Collapsible Group Item #2
+          </button>
+        </h5>
+      </div>
+      <div
+        id="collapseTwo"
+        class="collapse"
+        aria-labelledby="headingTwo"
+        data-parent="#accordion"
+      >
+        <div class="card-body">
+          Anim pariatur cliche reprehenderit, enim eiusmod high
+          life accusamus terry richardson ad squid. 3 wolf moon
+          officia aute, non cupidatat skateboard dolor brunch.
+          Food truck quinoa nesciunt laborum eiusmod. Brunch 3
+          wolf moon tempor, sunt aliqua put a bird on it squid
+          single-origin coffee nulla assumenda shoreditch et.
+          Nihil anim keffiyeh helvetica, craft beer labore wes
+          anderson cred nesciunt sapiente ea proident. Ad vegan
+          excepteur butcher vice lomo. Leggings occaecat craft
+          beer farm-to-table, raw denim aesthetic synth nesciunt
+          you probably haven't heard of them accusamus labore
+          sustainable VHS.
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header" id="headingThree">
+        <h5 class="mb-0">
+          <button
+            class="btn btn-link collapsed"
+            data-toggle="collapse"
+            data-target="#collapseThree"
+            aria-expanded="false"
+            aria-controls="collapseThree"
+          >
+            Collapsible Group Item #3
+          </button>
+        </h5>
+      </div>
+      <div
+        id="collapseThree"
+        class="collapse"
+        aria-labelledby="headingThree"
+        data-parent="#accordion"
+      >
+        <div class="card-body">
+          Anim pariatur cliche reprehenderit, enim eiusmod high
+          life accusamus terry richardson ad squid. 3 wolf moon
+          officia aute, non cupidatat skateboard dolor brunch.
+          Food truck quinoa nesciunt laborum eiusmod. Brunch 3
+          wolf moon tempor, sunt aliqua put a bird on it squid
+          single-origin coffee nulla assumenda shoreditch et.
+          Nihil anim keffiyeh helvetica, craft beer labore wes
+          anderson cred nesciunt sapiente ea proident. Ad vegan
+          excepteur butcher vice lomo. Leggings occaecat craft
+          beer farm-to-table, raw denim aesthetic synth nesciunt
+          you probably haven't heard of them accusamus labore
+          sustainable VHS.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
