--- a/new_version/index.html
+++ b/new_version/index.html
@@ -674,168 +674,101 @@
                 <form>
                   <div class="row gap-row">
                     <div class="col">
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Website hiện tại nếu có"
-                      />
-                    </div>
-                    <div class="col">
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Tên công ty anh/chị có ý nghĩa gì?"
-                      />
+                      <input type="text" class="form-control" placeholder="Mục đích xây dựng website mới? (Thể hiện được các tiêu chí của công ty: công ty lớn uy tín lâu năm, sáng tạo, luôn đổi mới, ... )">
                     </div>
                   </div>
                   <div class="row gap-row">
                     <div class="col">
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Hãy liệt kê các đối thủ cạnh tranh chính? (Vui lòng gửi địa chỉ website nếu có)"
-                      />
-                    </div>
-                    <div class="col">
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Sự khác biệt của công ty với các đối thủ khác"
-                      />
+                      <input type="text" class="form-control" placeholder="Sản phẩm/dịch vụ công ty anh chị giới thiệu trên website là gì?">
                     </div>
                   </div>
                   <div class="row gap-row">
                     <div class="col">
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Slogan hoặc tagline của công ty anh/chị là gì?"
-                      />
+                      <input type="text" class="form-control" placeholder="Những điểm cần lưu ý ở website mới hoặc cần cải thiện so với website cũ">
                     </div>
-                    <div class="col">
-                      <input
-                        type="text"
-                        class="form-control"
-                        placeholder="Vui lòng cho biết ngân sách ước tính cho dự án này"
-                      />
-                    </div>
-                  </div>
+                  </div>  
                 </form>
-              </div>
-              <!-- FORM 3 -->
-              <div class="layout_in-side">
-                <div id="accordion">
-                  <div class="card">
-                    <div class="card-header" id="headingOne">
-                      <h5 class="mb-0">
-                        <button
-                          class="btn btn-link"
-                          data-toggle="collapse"
-                          data-target="#collapseOne"
-                          aria-expanded="true"
-                          aria-controls="collapseOne"
-                        >
-                          Collapsible Group Item #1
-                        </button>
-                      </h5>
-                    </div>
-
-                    <div
-                      id="collapseOne"
-                      class="collapse show"
-                      aria-labelledby="headingOne"
-                      data-parent="#accordion"
-                    >
-                      <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high
-                        life accusamus terry richardson ad squid. 3 wolf moon
-                        officia aute, non cupidatat skateboard dolor brunch.
-                        Food truck quinoa nesciunt laborum eiusmod. Brunch 3
-                        wolf moon tempor, sunt aliqua put a bird on it squid
-                        single-origin coffee nulla assumenda shoreditch et.
-                        Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan
-                        excepteur butcher vice lomo. Leggings occaecat craft
-                        beer farm-to-table, raw denim aesthetic synth nesciunt
-                        you probably haven't heard of them accusamus labore
-                        sustainable VHS.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header" id="headingTwo">
-                      <h5 class="mb-0">
-                        <button
-                          class="btn btn-link collapsed"
-                          data-toggle="collapse"
-                          data-target="#collapseTwo"
-                          aria-expanded="false"
-                          aria-controls="collapseTwo"
-                        >
-                          Collapsible Group Item #2
-                        </button>
-                      </h5>
-                    </div>
-                    <div
-                      id="collapseTwo"
-                      class="collapse"
-                      aria-labelledby="headingTwo"
-                      data-parent="#accordion"
-                    >
-                      <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high
-                        life accusamus terry richardson ad squid. 3 wolf moon
-                        officia aute, non cupidatat skateboard dolor brunch.
-                        Food truck quinoa nesciunt laborum eiusmod. Brunch 3
-                        wolf moon tempor, sunt aliqua put a bird on it squid
-                        single-origin coffee nulla assumenda shoreditch et.
-                        Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan
-                        excepteur butcher vice lomo. Leggings occaecat craft
-                        beer farm-to-table, raw denim aesthetic synth nesciunt
-                        you probably haven't heard of them accusamus labore
-                        sustainable VHS.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header" id="headingThree">
-                      <h5 class="mb-0">
-                        <button
-                          class="btn btn-link collapsed"
-                          data-toggle="collapse"
-                          data-target="#collapseThree"
-                          aria-expanded="false"
-                          aria-controls="collapseThree"
-                        >
-                          Collapsible Group Item #3
-                        </button>
-                      </h5>
-                    </div>
-                    <div
-                      id="collapseThree"
-                      class="collapse"
-                      aria-labelledby="headingThree"
-                      data-parent="#accordion"
-                    >
-                      <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high
-                        life accusamus terry richardson ad squid. 3 wolf moon
-                        officia aute, non cupidatat skateboard dolor brunch.
-                        Food truck quinoa nesciunt laborum eiusmod. Brunch 3
-                        wolf moon tempor, sunt aliqua put a bird on it squid
-                        single-origin coffee nulla assumenda shoreditch et.
-                        Nihil anim keffiyeh helvetica, craft beer labore wes
-                        anderson cred nesciunt sapiente ea proident. Ad vegan
-                        excepteur butcher vice lomo. Leggings occaecat craft
-                        beer farm-to-table, raw denim aesthetic synth nesciunt
-                        you probably haven't heard of them accusamus labore
-                        sustainable VHS.
-                      </div>
-                    </div>
-                  </div>
+                <div class="text5">
+                  <h3>MỤC TIÊU MUỐN ĐẠT ĐƯỢC ĐỐI VỚI WEBSITE MỚI NÀY</h3>
+                </div>
+                <div class=".checkbox_layout-inline">
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                  <label class="form-check-label" for="inlineCheckbox1">Giới thiệu công ty</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                  <label class="form-check-label" for="inlineCheckbox2">Thương mại điện tử</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                  <label class="form-check-label" for="inlineCheckbox3">Thu hút khách hàng mới</label>
                 </div>
               </div>
+              <div class="row gap-row">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Khác">
+                </div>
+              </div>  
+              <div class="row gap-row">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Vui lòng liệt kê 1 vài mẫu thiết kế website mà công ty anh/chị cảm thấy thích. Những điểm mà anh/ chị thích trên những website đó là gì?">
+                </div>
+              </div>  
+              <div class="row gap-row">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Các từ/cụm từ mà công ty bạn muốn người dùng tìm kiếm sẽ dẫn đến trang web của công ty bạn?">
+                </div>
+              </div>  
+              <div class="row gap-row">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Vui lòng liệt kê những trang chính mà công ty anh/ chị cần phải có trên website (Ví dụ: Trang chủ, Giới thiệu, Liên hệ, Sản phẩm, Cơ hội nghề nghiệp, Sự kiện...)">
+                </div>
+              </div>
+              <div class="text5">
+                <h3>MÔ TẢ VỀ PHONG CÁCH WEBSITE MONG MUỐN</h3>
+              </div>
+              <div class="checkbox-layout">
+              <div class="form-check form-check">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                <label class="form-check-label" for="inlineCheckbox1">Hiện đại</label>
+              </div>
+              <div class="form-check form-check">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                <label class="form-check-label" for="inlineCheckbox2">Trẻ trung</label>
+              </div>
+              <div class="form-check form-check">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                <label class="form-check-label" for="inlineCheckbox3">Đơn giản</label>
+              </div>
+              <div class="form-check form-check">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                <label class="form-check-label" for="inlineCheckbox3">Sang trọng</label>
+              </div>
+              <div class="form-check form-check">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                <label class="form-check-label" for="inlineCheckbox3">Bố cục mới lạ</label>
+              </div>
+              <div class="form-check form-check">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                <label class="form-check-label" for="inlineCheckbox3">Cổ điển</label>
+              </div>
+              <div class="form-check form-check">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                <label class="form-check-label" for="inlineCheckbox3">Màu sắc</label>
+              </div>
+              <div class="form-check form-check">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                <label class="form-check-label" for="inlineCheckbox3">Hoài cổ</label>
+              </div>
+            </div>
+            <div class="row gap-row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Khác">
+              </div>
+            </div>
+              </div>
+              <!-- FORM 3 -->
             </div>
           </div>
         </div>
