--- a/new_version/index.html
+++ b/new_version/index.html
@@ -14,10 +14,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;500;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/new_version/assets/css/reset.css" />
-    <link rel="stylesheet" href="/new_version/assets/css/style.css" />
-    <link rel="stylesheet" href="/new_version/assets/css/animate.css">
-    <link rel="stylesheet" href="/new_version/assets/css/base.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href=".assets/css/animate.css">
+    <link rel="stylesheet" href="./assets/css/base.css" />
     <title>Sodia Business</title>
   </head>
   <body>
